// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots activity/ActivityContainer Empty 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root makeStyles-sectionHeader MuiGrid-container MuiGrid-align-items-xs-flex-start MuiGrid-justify-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Activity
        </h1>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiBox-root MuiBox-root"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
          data-testid="empty"
        >
          No activity found for the last week.
          <br />
          <br />
          You will see here important events related to the rollout of your updates. Stay tuned!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots activity/ActivityContainer List 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root makeStyles-sectionHeader MuiGrid-container MuiGrid-align-items-xs-flex-start MuiGrid-justify-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Activity
        </h1>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiBox-root MuiBox-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-listTitle MuiTypography-body1"
          >
            Wednesday, May 13, 2020
          </p>
          <ul
            class="MuiList-root MuiList-padding"
          >
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
                          fill="#00d3ff"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        ABC
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:56 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel beta is now pointing to version 0.0.0
                </div>
              </div>
            </li>
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
                          fill="#00d3ff"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        DEF
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:55 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel beta is now pointing to version 0.0.0
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiTablePagination-root"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar makeStyles-toolbar MuiToolbar-gutters"
            >
              <div
                class="MuiTablePagination-spacer"
              />
              <p
                class="MuiTypography-root MuiTablePagination-caption makeStyles-caption MuiTypography-body2 MuiTypography-colorInherit"
              >
                Rows per page:
              </p>
              <div
                class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot"
              >
                <div
                  aria-haspopup="listbox"
                  class="MuiSelect-root MuiSelect-select MuiTablePagination-select makeStyles-select MuiSelect-selectMenu MuiInputBase-input"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  tabindex="-1"
                  value="5"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTablePagination-caption makeStyles-caption MuiTypography-body2 MuiTypography-colorInherit"
              >
                1-2 of 2
              </p>
              <div
                class="MuiTablePagination-actions"
              >
                <button
                  aria-label="previous page"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                  disabled=""
                  tabindex="-1"
                  title="Previous page"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="next page"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                  disabled=""
                  tabindex="-1"
                  title="Next page"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots activity/ActivityContainer Multiple Days 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root makeStyles-sectionHeader MuiGrid-container MuiGrid-align-items-xs-flex-start MuiGrid-justify-xs-space-between"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Activity
        </h1>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiBox-root MuiBox-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-listTitle MuiTypography-body1"
          >
            Wednesday, May 13, 2020
          </p>
          <ul
            class="MuiList-root MuiList-padding"
          >
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
                          fill="#00d3ff"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        ABC
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:56 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel beta is now pointing to version 0.0.0
                </div>
              </div>
            </li>
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
                          fill="#00d3ff"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        DEF
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:55 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel beta is now pointing to version 0.0.0
                </div>
              </div>
            </li>
          </ul>
          <p
            class="MuiTypography-root makeStyles-listTitle MuiTypography-body1"
          >
            Thursday, May 14, 2020
          </p>
          <ul
            class="MuiList-root MuiList-padding"
          >
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42z"
                          fill="#22bb00"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        DEB
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:56 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel beta is now pointing to version 0.0.1
                </div>
              </div>
            </li>
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2L1 21h22M12 6l7.53 13H4.47M11 10v4h2v-4m-2 6v2h2v-2"
                          fill="#ff5500"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        DOF
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:55 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel beta is now pointing to version 0.0.1
                </div>
              </div>
            </li>
            <li
              class="MuiListItem-root makeStyles-list MuiListItem-alignItemsFlexStart"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <svg
                        focusable="false"
                        height="30px"
                        preserveAspectRatio="xMidYMid meet"
                        style="transform: rotate(360deg);"
                        viewBox="0 0 24 24"
                        width="30px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42z"
                          fill="#22bb00"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <p
                        class="MuiTypography-root makeStyles-appName MuiTypography-body1"
                      >
                        DAL
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                >
                  <p
                    class="MuiTypography-root makeStyles-time MuiTypography-body1 MuiTypography-colorTextSecondary"
                  >
                    02:56 PM
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  Channel alpha is now pointing to version 0.0.1
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiTablePagination-root"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar makeStyles-toolbar MuiToolbar-gutters"
            >
              <div
                class="MuiTablePagination-spacer"
              />
              <p
                class="MuiTypography-root MuiTablePagination-caption makeStyles-caption MuiTypography-body2 MuiTypography-colorInherit"
              >
                Rows per page:
              </p>
              <div
                class="MuiInputBase-root MuiTablePagination-input MuiTablePagination-selectRoot"
              >
                <div
                  aria-haspopup="listbox"
                  class="MuiSelect-root MuiSelect-select MuiTablePagination-select makeStyles-select MuiSelect-selectMenu MuiInputBase-input"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  tabindex="-1"
                  value="5"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon MuiTablePagination-selectIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiTypography-root MuiTablePagination-caption makeStyles-caption MuiTypography-body2 MuiTypography-colorInherit"
              >
                1-5 of 6
              </p>
              <div
                class="MuiTablePagination-actions"
              >
                <button
                  aria-label="previous page"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-disabled MuiButtonBase-disabled"
                  disabled=""
                  tabindex="-1"
                  title="Previous page"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-label="next page"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
                  tabindex="0"
                  title="Next page"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
